to local time set

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <!-- tailwind link  -->
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+<!-- css link -->
+ <link rel="stylesheet" href="./style/style.css">
 
 </head>
 
@@ -51,7 +53,7 @@
         </div>    
         <!-- banner -->
             
-        <div class="w-full mx-auto min-h-[200px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]  py-6 text-[#fefefe] px-4 md:px-2 lg:px-0 xl:px-0 2xl:px-0">
+        <div class="w-full mx-auto min-h-[200px]  bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]  py-6 text-[#fefefe] px-4 md:px-2 lg:px-0 xl:px-0 2xl:px-0">
             <img src="./assets/logo.png" alt="" class="w-[92px] mx-auto mb-3">
             <h1 class="text-center text-[30px] font-semibold mb-3 md:text-[40px]">জরুরি সেবা ডিরেক্টরি</h1>
             <p class="text-center text-[20px] mb-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
@@ -264,80 +266,7 @@
                 <button id="clear-btn" class=" bg-[#00A63E] py-3 px-5 rounded-[50px] text-white font-medium">Clear</button>
             </div>
 
-            <ul id="service">
-                <li id="first" class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7 "  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7" style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7 " style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-
-                <li class="flex justify-between items-center p-4 bg-[#fafafa] rounded-lg mb-7"  style="display: none;">
-                    <div>
-                        <h1 class="text-[18px] font-normal">জাতীয় জরুরি সেবা</h1>
-                        <p>999</p>
-                    </div>
-                    <span>10:20:02am</span>
-                </li>
-                
-            </ul>
+            <ul id="service"></ul>
         </div>
 
     </div>
